After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687030 - ogg: crash checking header of empty ogg packet
ogg: crash checking header of empty ogg packet
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other All
: Normal critical
: 1.0.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-10-28 10:02 UTC by Jonathan Liu
Modified: 2012-10-29 12:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (814 bytes, patch)
2012-10-28 10:05 UTC, Jonathan Liu
none Details | Review
Patch (811 bytes, patch)
2012-10-28 10:14 UTC, Jonathan Liu
committed Details | Review

Description Jonathan Liu 2012-10-28 10:02:18 UTC
In is_header_vorbis (ext/ogg/gstoggstream.c), the packet data is dereferenced when packet->bytes is 0.
Comment 1 Jonathan Liu 2012-10-28 10:05:40 UTC
Created attachment 227447 [details] [review]
Patch
Comment 2 Jonathan Liu 2012-10-28 10:14:57 UTC
Created attachment 227448 [details] [review]
Patch
Comment 3 Tim-Philipp Müller 2012-10-29 12:41:18 UTC
Thanks, pushed:

 commit 7f22e3ea7f713867e1fbf2ef71b6a6e36e1f0531
 Author: Jonathan Liu <net147@gmail.com>
 Date:   Sun Oct 28 21:07:16 2012 +1100

    oggstream: fix crash with 0 byte ogg packets
    
    https://bugzilla.gnome.org/show_bug.cgi?id=687030