oggstream: fix crash with 0 byte ogg packets

https://bugzilla.gnome.org/show_bug.cgi?id=687030